gcc/testsuite/rust/rustc/ui/issues/issue-44078.rs
fn main() {
    "ğŸ˜Š""; // { dg-error ".E0765." "" { target *-*-* } }
}

